roots/digitalocean/panoptica/ansible/files/openai.yml
---
apiVersion: v1
kind: Service
metadata:
  name: openai
  annotations:
    external-dns.alpha.kubernetes.io/hostname: flask.do.iot4.net
spec:
  type: LoadBalancer
  selector:
    app: openai
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openai
  template:
    metadata:
      labels:
        app: openai
    spec:
      containers:
      - name: openai
        image: vchokshi/openai
        ports:
        - containerPort: 5000
          protocol: TCP
