roots/digitalocean/panoptica/ansible/files/www-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: www-nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: www-nginx.do.iot4.net
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: www-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-nginx
spec:
  selector:
    matchLabels:
      app: www-nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: www-nginx
    spec:
      containers:
      - name: www
        image: vchokshi/www-nginx
        ports:
        - containerPort: 80
