roots/digitalocean/panoptica/ansible/files/dvwa.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "dvwa.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dvwa
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dvwa
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dvwa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa
spec:
  selector:
    matchLabels:
      app: dvwa
  replicas: 1
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
      - name: dvwa
        image: cyberxsecurity/dvwa
        ports:
        - containerPort: 80
