roots/digitalocean/panoptica/ansible/files/flask-honeycomb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-honeycomb
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "flask-honeycomb.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-honeycomb
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask-honeycomb
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-honeycomb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-honeycomb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-honeycomb
  template:
    metadata:
      labels:
        app: flask-honeycomb
    spec:
      containers:
      - name: openai
        image: vchokshi/openai
        ports:
        - containerPort: 5000
          protocol: TCP
