roots/digitalocean/panoptica/ansible/files/fo.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - fo.do.iot4.net
     secretName: fo-cert
  rules:
  - host: "fo.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fo
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fo
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: fo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fo
spec:
  selector:
    matchLabels:
      app: fo
  replicas: 2
  template:
    metadata:
      labels:
        app: fo
    spec:
      containers:
      - name: fo
        image: public.ecr.aws/n7r0o9o5/fo
        ports:
        - containerPort: 3000
