roots/digitalocean/panoptica/ansible/files/leza.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leza-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "leza.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: leza
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: leza
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: leza
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leza
spec:
  selector:
    matchLabels:
      app: leza
  replicas: 2
  template:
    metadata:
      labels:
        app: leza
    spec:
      containers:
      - name: leza
        image: vchokshi/leza
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
