roots/digitalocean/panoptica/ansible/files/mutillidae.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mutillidae
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "mutillidae.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mutillidae
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mutillidae
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mutillidae
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutillidae
spec:
  selector:
    matchLabels:
      app: mutillidae
  replicas: 1
  template:
    metadata:
      labels:
        app: mutillidae
    spec:
      containers:
      - name: mutillidae
        image: cyberxsecurity/mutillidae
        ports:
        - containerPort: 80
