roots/digitalocean/panoptica/ansible/files/viharc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viharc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - viharc.do.iot4.net
     secretName: viharc-cert
  rules:
  - host: "viharc.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: viharc
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: viharc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: viharc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viharc
spec:
  selector:
    matchLabels:
      app: viharc
  replicas: 3
  template:
    metadata:
      labels:
        app: viharc
    spec:
      containers:
      - name: viharc
        image: vchokshi/viharc:3f267b6
        imagePullPolicy: Always
        ports:
        - containerPort: 80
