roots/digitalocean/panoptica/ansible/files/vpn.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "vpn.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vpn
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vpn
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vpn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn
spec:
  selector:
    matchLabels:
      app: vpn
  replicas: 3
  template:
    metadata:
      labels:
        app: vpn
    spec:
      containers:
      - name: vpn
        image: vchokshi/vpn
        imagePullPolicy: Always
        ports:
        - containerPort: 80
