roots/digitalocean/panoptica/ansible/files/www-apache.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-apache-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "www-apache.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: www-apache
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: www-apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: www-apache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-apache
spec:
  selector:
    matchLabels:
      app: www-apache
  replicas: 1
  template:
    metadata:
      labels:
        app: www-apache
    spec:
      containers:
      - name: www
        image: vchokshi/www-apache
        ports:
        - containerPort: 80
